<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Barrier</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="barrier_client_name">Barrier Client name</string>
    <string name="default_client_name">android</string>
    <string name="server_ip">Server IP/Hostname</string>
    <string name="default_ip_address">192.168.43.228</string>
    <string name="server_port">Server Port</string>
    <string name="default_port">24800</string>
    <string name="input_device_name">Input device name</string>
    <string name="default_input_device_name">touchscreen</string>
    <string name="cursor">Cursor</string>
    <string name="overlay_permission_denied">Draw over other apps permission denied</string>
    <string name="accessibility_permission_denied">Accessibility permission denied</string>
    <string name="learn_more">Learn more</string>
    <string name="fix_it">Fix it</string>
    <string name="requires_accessibility_overlay_perms">Barrier client requires Accessibility enabled and also requires permission to draw over apps.</string>
    <string name="requires_accessibility_perm">Barrier client requires Accessibility enabled.</string>
    <string name="requires_overlay_perm">Barrier client requires permission to draw over apps.</string>
    <string name="requires_overlay_perm_detail">Barrier client requires permission to draw over apps to show the mouse cursor.</string>
    <string name="requires_accessibility_perm_detail">Barrier client requires Accessibility enabled to perform clicks and handle keyboard input.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_server">Add server</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="server">Server</string>
    <string name="add_new_server">Add New Server</string>
    <string name="edit_server">Edit server</string>
    <string name="connected_to_server_name">Connected to %s</string>
    <string name="connecting">Connecting</string>
    <string name="settings">Settings</string>
</resources>