<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/clientNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/clientNameEditText"
        android:paddingTop="8dp"
        android:text="@string/barrier_client_name"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/clientNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clientNameTextView"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/default_client_name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/serverHostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clientNameEditText"
        android:layout_marginStart="8dp"
        android:labelFor="@id/serverHostEditText"
        android:paddingTop="8dp"
        android:text="@string/server_ip"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/serverHostEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serverHostTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/default_ip_address"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/serverPortTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serverHostEditText"
        android:layout_alignStart="@+id/clientNameTextView"
        android:labelFor="@id/serverPortEditText"
        android:paddingTop="8dp"
        android:text="@string/server_port"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/serverPortEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serverPortTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/default_port"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/inputDeviceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serverPortEditText"
        android:layout_alignStart="@+id/clientNameTextView"
        android:layout_marginTop="8dp"
        android:labelFor="@id/inputDeviceEditText"
        android:text="@string/input_device_name"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputDeviceEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputDeviceTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/editbox_background"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/default_input_device_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="197dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/connect"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>